@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>net.bull.javamelody</groupId>
 	<artifactId>javamelody-core</artifactId>
-	<version>1.91.0-SNAPSHOT</version>
+	<version>2.6.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>JavaMelody - Core</name>
 	<description>Monitoring of JavaEE applications</description>
@@ -11,7 +11,7 @@
 	<inceptionYear>2008</inceptionYear>
 	<licenses>
 		<license>
-			<name>ASL</name>
+			<name>Apache-2.0</name>
 			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
 			<distribution>repo</distribution>
 		</license>
@@ -30,7 +30,7 @@
 		<connection>scm:git:git@github.com:javamelody/javamelody.git</connection>
 		<developerConnection>scm:git:git@github.com:javamelody/javamelody.git</developerConnection>
 		<url>https://github.com/javamelody/javamelody</url>
-		<tag>HEAD</tag>
+		<tag>javamelody-core-2.3.0</tag>
 	</scm>
 	<mailingLists>
 		<mailingList>
@@ -43,7 +43,16 @@
 	<organization>
 		<name>Emeric Vernat</name>
 	</organization>
-	<dependencies>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>javax.xml.bind</groupId>
+				<artifactId>jaxb-api</artifactId>
+				<version>2.3.1</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+  	<dependencies>
 		<!-- jrobin transitive dependency for graphs -->
 		<dependency>
 			<groupId>org.jrobin</groupId>
@@ -53,70 +62,82 @@
 
 		<!-- following dependencies are not transitive: they are provided, test
 			or optional -->
+		<!-- 
+		Jakarta EE 9 (Java 8 minimum) : https://projects.eclipse.org/releases/jakarta-ee-9
+		Jakarta EE 9.1 : https://eclipse-ee4j.github.io/jakartaee-platform/jakartaee9/JakartaEE9.1ReleasePlan
+		Jakarta EE 10 (Java 11 minimum) : https://eclipse-ee4j.github.io/jakartaee-platform/jakartaee10/JakartaEE10ReleasePlan
+		 -->
 		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
-			<version>4.0.1</version>
+			<groupId>jakarta.servlet</groupId>
+			<artifactId>jakarta.servlet-api</artifactId>
+			<version>5.0.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>javax.servlet.jsp</groupId>
-			<artifactId>javax.servlet.jsp-api</artifactId>
-			<version>2.3.3</version>
+			<groupId>jakarta.servlet.jsp</groupId>
+			<artifactId>jakarta.servlet.jsp-api</artifactId>
+			<version>3.0.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>javax.mail</groupId>
-			<artifactId>javax.mail-api</artifactId>
-			<version>1.6.2</version>
+			<groupId>jakarta.mail</groupId>
+			<artifactId>jakarta.mail-api</artifactId>
+			<version>2.0.1</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<!-- included as a dependency in mail-api since 2.1.x (Jakarta EE 10) -->
+			<groupId>jakarta.activation</groupId>
+			<artifactId>jakarta.activation-api</artifactId>
+			<version>2.0.1</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.sun.mail</groupId>
-			<artifactId>javax.mail</artifactId>
-			<version>1.6.2</version>
+			<artifactId>jakarta.mail</artifactId>
+			<version>2.0.1</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>javax.ejb</groupId>
-			<artifactId>javax.ejb-api</artifactId>
-			<version>3.2.2</version>
+			<groupId>jakarta.ejb</groupId>
+			<artifactId>jakarta.ejb-api</artifactId>
+			<version>4.0.1</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>javax.interceptor</groupId>
-			<artifactId>javax.interceptor-api</artifactId>
-			<version>1.2.2</version>
+			<groupId>jakarta.interceptor</groupId>
+			<artifactId>jakarta.interceptor-api</artifactId>
+			<version>2.0.1</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>javax.persistence</groupId>
-			<artifactId>javax.persistence-api</artifactId>
-			<version>2.2</version>
+			<groupId>jakarta.persistence</groupId>
+			<artifactId>jakarta.persistence-api</artifactId>
+			<version>3.0.0</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.glassfish</groupId>
-			<artifactId>javax.faces</artifactId>
-			<version>2.4.0</version>
+			<artifactId>jakarta.faces</artifactId>
+			<version>3.0.5</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
+			<groupId>jakarta.el</groupId>
+			<artifactId>jakarta.el-api</artifactId>
+			<version>4.0.0</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
-			<version>2.16.0</version>
+			<version>2.24.3</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
-			<version>1.2.3</version>
+			<version>1.5.15</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
@@ -142,129 +163,130 @@
 		<dependency>
 			<groupId>net.sf.ehcache</groupId>
 			<artifactId>ehcache</artifactId>
-			<version>1.6.2</version>
+			<version>2.10.9.2</version>
 			<optional>true</optional>
+			<exclusions>
+				<exclusion>
+					<groupId>org.glassfish.jaxb</groupId>
+					<artifactId>jaxb-runtime</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.ehcache</groupId>
 			<artifactId>ehcache</artifactId>
-			<version>3.9.4</version>
+			<version>3.10.8</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.glassfish.jaxb</groupId>
+					<artifactId>jaxb-runtime</artifactId>
+				</exclusion>
+			</exclusions>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>javax.cache</groupId>
-			<artifactId>cache-api</artifactId>
-			<version>1.1.1</version>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>quartz</groupId>
+			<groupId>org.quartz-scheduler</groupId>
 			<artifactId>quartz</artifactId>
-			<version>1.5.2</version>
+			<version>2.5.0</version>
 			<optional>true</optional>
+			<exclusions>
+				<exclusion>
+					<artifactId>c3p0</artifactId>
+					<groupId>c3p0</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
-		<!-- <dependency> <groupId>org.quartz-scheduler</groupId> <artifactId>quartz</artifactId>
-			<version>2.1.2</version> <optional>true</optional> <exclusions> <exclusion>
-			<artifactId>c3p0</artifactId> <groupId>c3p0</groupId> </exclusion> </exclusions>
-			</dependency> -->
 		<dependency>
 			<groupId>com.thoughtworks.xstream</groupId>
 			<artifactId>xstream</artifactId>
-			<version>1.4.18</version>
+			<version>1.4.21</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>2.8.7</version>
+			<version>2.11.0</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.tomcat</groupId>
-			<artifactId>dbcp</artifactId>
-			<version>6.0.53</version>
-			<scope>provided</scope>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.7.7</version>
+			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
 			<artifactId>tomcat-dbcp</artifactId>
-			<version>10.0.8</version>
+			<version>10.1.46</version>
 			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>commons-dbcp</groupId>
-			<artifactId>commons-dbcp</artifactId>
-			<version>1.4</version>
-			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-dbcp2</artifactId>
-			<version>2.8.0</version>
+			<version>2.13.0</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
 			<artifactId>tomcat-jdbc</artifactId>
-			<version>10.0.8</version>
+			<version>10.1.46</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>org.hibernate</groupId>
+			<groupId>org.hibernate.orm</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>5.6.0.Final</version>
+			<version>6.6.4.Final</version>
 			<optional>true</optional>
 		</dependency>
-		<!-- Dépendance optionnelle spring web (qui inclus spring core, spring
-			beans, spring aop) -->
+		<!-- Dépendance optionnelle spring web (qui inclus spring core, spring beans, spring aop) -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
-			<version>5.3.8</version>
+			<version>6.2.8</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-			<version>5.3.8</version>
+			<version>6.2.8</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
-			<version>5.3.8</version>
+			<version>6.2.8</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-mongodb</artifactId>
-			<version>3.2.2</version>
+			<version>4.2.12</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.mongodb</groupId>
 			<artifactId>mongodb-driver-sync</artifactId>
-			<version>4.2.3</version>
+			<version>4.11.5</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-elasticsearch</artifactId>
-			<version>4.2.2</version>
+			<version>5.4.1</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<!-- for Spring RestTemplate in unit tests -->
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.12.4</version>
+			<version>2.18.2</version>
 			<scope>test</scope>
 		</dependency>
 		<!-- Dépendance optionnelle google guice (aop) -->
 		<dependency>
 			<groupId>com.google.inject</groupId>
 			<artifactId>guice</artifactId>
-			<version>5.0.1</version>
+			<version>7.0.0</version>
 			<optional>true</optional>
 		</dependency>
 		<!-- Dépendance optionnelle xwork pour interceptor struts 2 -->
@@ -278,13 +300,13 @@
 		<dependency>
 			<groupId>com.amazonaws</groupId>
 			<artifactId>aws-java-sdk-cloudwatch</artifactId>
-			<version>1.11.136</version>
+			<version>1.12.780</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>com.amazonaws</groupId>
 			<artifactId>aws-java-sdk-s3</artifactId>
-			<version>1.11.136</version>
+			<version>1.12.780</version>
 			<optional>true</optional>
 		</dependency>
 		<!-- Dépendance JUnit -->
@@ -299,7 +321,7 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<version>1.4.200</version>
+			<version>2.3.232</version>
 			<!-- Utilisée uniquement pour l'exécution des tests unitaires -->
 			<scope>test</scope>
 		</dependency>
@@ -307,7 +329,7 @@
 		<dependency>
 			<groupId>org.easymock</groupId>
 			<artifactId>easymock</artifactId>
-			<version>4.3</version>
+			<version>5.5.0</version>
 			<!-- Utilisée uniquement pour l'exécution des tests unitaires -->
 			<scope>test</scope>
 		</dependency>
@@ -315,7 +337,7 @@
 		<dependency>
 			<groupId>org.apache.openjpa</groupId>
 			<artifactId>openjpa</artifactId>
-			<version>3.2.0</version>
+			<version>3.2.2</version>
 			<!-- Utilisée uniquement pour l'exécution des tests unitaires -->
 			<scope>test</scope>
 		</dependency>
@@ -352,23 +374,15 @@
 			<!-- Configuration compilation -->
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
+				<version>3.13.0</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
-					<fork>true</fork>
-					<!-- pour éviter warning dans Maven sur sun.nio.ch.DirectBuffer dans
-						RrdNioBackend -->
-					<compilerArgument>-XDignore.symbol.file=true -Xlint</compilerArgument>
-					<showWarnings>true</showWarnings>
-					<!-- pour éviter warning dans Maven sur sun.misc.BASE64Encoder dans
-						le test unitaire TestBase64Coder -->
-					<testCompilerArgument>-XDignore.symbol.file=true -Xlint</testCompilerArgument>
+					<source>11</source>
+					<target>11</target>
 				</configuration>
 			</plugin>
 			<plugin>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.2.0</version>
+				<version>3.4.2</version>
 				<configuration>
 					<excludes>
 						<exclude>**/Thumbs.db</exclude>
@@ -387,7 +401,7 @@
 			<!-- Configuration exécution des tests unitaires -->
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.2</version>
+				<version>3.5.2</version>
 				<configuration>
 					<testFailureIgnore>true</testFailureIgnore>
 					<!-- Ce paramètre permet aussi de tester l'appel à RuntimeMXBean.getInputArguments() -->
@@ -395,46 +409,25 @@
 						-Djava.io.tmpdir=${project.basedir}/target/tmp</argLine>
 				</configuration>
 			</plugin>
-
-			<!-- Configuration Couverture des tests unitaires -->
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>cobertura-maven-plugin</artifactId>
-				<!-- la version 2.6 ne donne pas la bonne couverture de code -->
-				<version>2.5.2</version>
-				<configuration>
-					<check>
-						<haltOnFailure>false</haltOnFailure>
-					</check>
-					<formats>
-						<format>xml</format>
-						<format>html</format>
-					</formats>
-				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>clean</goal>
-							<goal>check</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
 			<plugin>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>3.3.0</version>
+				<version>3.11.2</version>
 				<configuration>
 					<doclint>none</doclint>
 					<offlineLinks>
 						<offlineLink>
-							<url>http://docs.oracle.com/javase/8/docs/api/</url>
+							<url>https://docs.oracle.com/javase/8/docs/api/</url>
 							<location>${project.basedir}/javase/</location>
 						</offlineLink>
 						<offlineLink>
-							<url>http://docs.oracle.com/javaee/7/api/</url>
-							<location>${project.basedir}/javaee/</location>
+							<url>https://jakarta.ee/specifications/platform/9/apidocs//</url>
+							<location>${project.basedir}/jakartaee/</location>
 						</offlineLink>
 					</offlineLinks>
+					<detectJavaApiLink>false</detectJavaApiLink>
+					<additionalJOptions>
+						<additionalJOption>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</additionalJOption>
+					</additionalJOptions>
 				</configuration>
 			</plugin>
 		</plugins>
